@@ -1139,6 +1139,7 @@ IDI_MAPTOOL_ZONEADD     ICON    DISCARDABLE     "maptool_zoneadd.ico"
 IDI_MAPTOOL_ZONEEDIT    ICON    DISCARDABLE     "maptool_zoneedit.ico"
 IDI_MAPTOOL_ZONEDELETE  ICON    DISCARDABLE     "maptool_zonedelete.ico"
 IDI_IMAGETOOL_SELECTION ICON    DISCARDABLE     "imagetool_selection.ico"
+IDI_IMAGETOOL_ELLIPSE   ICON    DISCARDABLE     "imagetool_ellipse.ico"
 
 /////////////////////////////////////////////////////////////////////////////
 //
